refactor: 카테고리 비즈니스 로직을 리팩토링합니다